--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,22 +26,21 @@ jobs:
 
       - name: Inject API Keys into files
         run: |
-          # Replace Supabase placeholders with actual secrets
-          sed -i "s|your_supabase_url_here|${{ secrets.SUPABASE_URL }}|g" js/auth.js
-          sed -i "s|your_supabase_anon_key_here|${{ secrets.SUPABASE_ANON_KEY }}|g" js/auth.js
-          sed -i "s|your_supabase_url_here|${{ secrets.SUPABASE_URL }}|g" js/medication.js
-          sed -i "s|your_supabase_anon_key_here|${{ secrets.SUPABASE_ANON_KEY }}|g" js/medication.js
+          # Create a production config script to replace config.local.js
+          cat > config.production.js << 'CONFIGEOF'
+          window.LOCAL_CONFIG = {
+            SUPABASE_URL: '${{ secrets.SUPABASE_URL }}',
+            SUPABASE_ANON_KEY: '${{ secrets.SUPABASE_ANON_KEY }}',
+            VERCEL_API_URL: '${{ secrets.VERCEL_API_URL }}'
+          };
+          CONFIGEOF
+          
+          # Replace config.local.js references with config.production.js in all HTML files
+          find . -name "*.html" -type f -exec sed -i 's|config.local.js|config.production.js|g' {} +
+          
+          # Also inject Groq API key for nurse.html if needed (kept for backward compatibility)
           sed -i "s|your_supabase_url_here|${{ secrets.SUPABASE_URL }}|g" nurse.html
           sed -i "s|your_supabase_anon_key_here|${{ secrets.SUPABASE_ANON_KEY }}|g" nurse.html
-          
-          # Replace Hugging Face placeholder with actual secret
-          sed -i "s/your_huggingface_token_here/${{ secrets.HUGGING_FACE_API_KEY }}/g" nurse.html
-          
-          # Inject Vercel API URL if configured (optional)
-          if [ -n "${{ secrets.VERCEL_API_URL }}" ]; then
-            echo "window.VERCEL_API_URL = '${{ secrets.VERCEL_API_URL }}';" > vercel-config.js
-            sed -i 's|<script src="config.local.js"></script>|<script>window.VERCEL_API_URL = "${{ secrets.VERCEL_API_URL }}";</script>|g' nurse.html
-          fi
           
       - name: Setup Pages
         uses: actions/configure-pages@v4
